PubApp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pub-svc
  labels:
    app: pub-svc
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: pub-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pub-app-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pub-app
        version: v1
    spec:
      containers:
      - name: pub-app
        image: leisureroad/pub-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pub-app-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pub-app
        version: v2
    spec:
      containers:
      - name: pub-app
        image: leisureroad/pub-app:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
