istio-VS.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pub-svc-vs
spec:
  hosts:
  - pub-svc
  - foo.fliu.top
  http:
#  - fault:
#      abort:
#        httpStatus: 500
#        percent: 100
#      delay:
#        fixedDelay: 7s
#        percent: 100
#    route:
#    - destination:
#        host: pub-svc
#        subset: v1
#  - route:
#    - destination:
#        host: pub-svc
#        subset: v1
#      weight: 50
#    - destination:
#        host: pub-svc
#        subset: v2
#      weight: 50
  - route:
    - destination:
        host: pub-svc
        subset: v1
#    timeout: 0.5s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pub-svc-dr
spec:
  host: pub-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
